@@ -82,6 +82,10 @@ PERSIST_WRITE_OBJS = \
 		utf8_mosq.o \
 		util_mosq.o
 
+TLS_TEST_OBJS = \
+		tls_test.o \
+		tls_stubs.o
+
 SUBS_TEST_OBJS = \
 		subs_test.o \
 		subs_stubs.o
@@ -111,6 +115,9 @@ persist_write_test : ${PERSIST_WRITE_TEST_OBJS} ${PERSIST_WRITE_OBJS}
 
 subs_test : ${SUBS_TEST_OBJS} ${SUBS_OBJS}
 	$(CROSS_COMPILE)$(CC) $(LDFLAGS) -o $@ $^ $(LDADD)
+
+tls_test : ${TLS_TEST_OBJS} ${TLS_OBJS}
+	$(CROSS_COMPILE)$(CC) $(LDFLAGS) -o $@ $^ $(LDADD) -lssl -lcrypto
 
 
 bridge_topic.o : ../../src/bridge_topic.c
@@ -167,10 +174,11 @@ util_topic.o : ../../lib/util_topic.c
 utf8_mosq.o : ../../lib/utf8_mosq.c
 	$(CROSS_COMPILE)$(CC) $(CPPFLAGS) $(CFLAGS) -c -o $@ $^
 
-build : mosq_test bridge_topic_test persist_read_test persist_write_test subs_test
+build : mosq_test bridge_topic_test persist_read_test persist_write_test subs_test tls_test
 
 test-lib : build
 	./mosq_test
+	./tls_test
 
 test-broker : build
 	./bridge_topic_test
