@@ -5,7 +5,8 @@ Security:
 - Broker will now reject Will messages that attempt to publish to $CONTROL/.
 - Broker now validates usernames provided in a TLS certificate or TLS-PSK
   identity are valid UTF-8.
-- Fix potential crash when loading invalid persitence file.
+- Fix potential crash when loading invalid persistence file.
+- Library will no longer allow single level wildcard certificates, e.g. *.com
 
 Broker:
 - Fix $SYS messages being expired after 60 seconds and hence unchanged values
